--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/FusionAnnotator/FusionAnnotator.git
 [submodule "ctat-genome-lib-builder"]
 	path = ctat-genome-lib-builder
-	url = https://github.com/NCIP/ctat-genome-lib-builder.git
+	url = https://github.com/zhuchcn/ctat-genome-lib-builder
